<resources>
    <string name="app_name">AMU RoboClub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_club">AMU Roboclub is a student&#8217;s body which caters to the need of
        electronics enthusiasts and hobbyists in creating an environment which is driven by innovation
        and implementation. Run under the able guidance and supervision of faculty advisors from various
        branches of engineering, AMU Roboclub stands as an epitome of marvel.\nIt not only acts as a
        platform for zealous students to hone their skills in the field of Electrical, Electronics,
        Computers and Mechanical but also prepares them for various national competitions by encouraging
        participation.In the last couple of years, students from AMU Roboclub have won many awards in
        various competitions which speak of its testimony.\nRegular Classes, Annual Workshop, Guest
        Lectures, Project Exhibition, Student Competitions etc are some of the main functions of the club.
        Robonics, the annual workshop of AMU Roboclub has earned a title in itself\n\nThe highlights of
        the club which differentiates it from the peers are its adherence to the curriculum, its
        student-student interaction and importantly project developments. More than 80 ideas have
        culminated into working models so far and the number is on the rise.\nThe strength of the club
        lies in its Student members, it is them who has given a high repute to the club. The members
        who complete at least one project under AMU Roboclub are felicitated and they earn for themselves
        a separate webpage in the AMU Roboclub website which is dedicated for their description and
        achievements.\nAMU Roboclub alumni always attribute a portion of their successes to the time
        and effort they spent at AMU Roboclub which helped them become what they are today
    </string>
    <string name="title_app">About App</string>
    <string name="title_developers">Developers</string>
    <string name="about_app">The AMU RoboClub Android App is a centralised hub of all club related activities. The app is
        built on the principle that there should be a robust and open source platform of Android Development where new members
        can easily extend it and add their own contributions in synchronised and professional manner using best engineering
        practices and design patterns.
    </string>
    <string name="title_activity_detail">About App</string>
    <string name="title_activity_project_detail">ProjectDetailActivity</string>
    <string name="slogan">Where innovation meets implementation</string>
    <string name="visit_attached_link">Visit attached link</string>
    <string name="no_news">No News</string>
    <string name="we_are_because_of_you">We are because of you!</string>
    <string name="contribution_thanks">Thank you for all the people who contributed in making RoboClub what it is today.\nWe couldn\'t have reached this place without your support.</string>
    <string name="feedback">Feedback</string>
    <string name="areeb_jamal">Areeb Jamal</string>
    <string name="divya_prakash_varshney">Divya Prakash Varshney</string>
    <string name="project_image">Project Image</string>
    <string name="youtube_video">Youtube Video</string>
    <string name="youtube_thumbnail">Youtube Thumbnail</string>
    <string name="images">Images</string>
    <string name="documents">Documents</string>
    <string name="backdrop">Backdrop</string>
    <string name="loading_members">Loading Team Members</string>
    <string name="mail_subject">To Co-Ordinator, AMU RoboClub</string>
    <string name="app_not_found">No app can handle the request</string>
    <string name="loading_contributors">Loading Contributors</string>
    <string name="loading_projects">Loading Projects</string>
    <string name="dividers">---</string>
    <string name="empty_feedback">Can\'t send empty feedback!</string>
    <string name="feedback_posted">Feedback Posted</string>
    <string name="intro">Intro</string>
    <string name="news">News</string>
    <string name="completed">Completed</string>
    <string name="ongoing">Ongoing</string>
    <string name="browser_not_found">No Browser Found!</string>
    <string name="source_code">Source Code</string>
    <string name="loading">Loading&#8230;</string>
    <string name="info">Info</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_home">Home</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_team">Team</string>
    <string name="menu_contributions">Contributions</string>
    <string name="menu_admin_panel">Admin Panel</string>
    <string name="facebook_application_id" translatable="false">604375436440333</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb604375436440333</string>
    <string name="signed_in">Signed in successfully</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed out successfully</string>
    <string name="signed_out_warning">You are currently signed out!</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="photograph">Photograph</string>
    <string name="no_image">No Image</string>
    <string name="profile_updated">User profile updated</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="link_optional">Link (Optional)</string>
    <string name="send">Send</string>
    <string name="save_announcement_only">Save Announcement only</string>
    <string name="send_notification_only">Send notification only</string>
    <string name="both">Both</string>
    <string name="notification_sender">Notification Sender</string>
    <string name="admin_detected">Roboclub Admin Detected</string>
    <string name="notification_sent">Notification sent</string>
    <string name="error_notification">Error sending notification!</string>
    <string name="modify_news">Modify News</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="error_loading_news">Error loading news</string>
    <string name="error_updating_news">Error updating news!</string>
    <string name="news_update_success">News updated successfully</string>
    <string name="news_delete_success">News Deleted Successfully</string>
    <string name="news_delete_error">Error deleting news</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="no_profile_found">No profile found</string>
    <string name="load_profile_error">Error occurred while getting profile</string>
    <string name="show_profile">Show Profile</string>
    <string name="team_year">Team 2016&#8211;2017</string>
    <string name="interests">Interests</string>
    <string name="projects">Projects</string>
    <string name="view_cv">View CV</string>
    <string name="welcome_message">Welcome %s</string>
    <string name="title_activity_profile_editor">ProfileEditorActivity</string>
    <string name="batch">Batch</string>
    <string name="cv_link">CV Link</string>
    <string name="photo_link">Photo Link</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="position">Position</string>
    <string name="image_load_failed">Image Load Failed</string>
    <string name="select_image">Select Image</string>
    <string name="upload_photograph">Upload Photograph</string>
    <string name="yes">Yes</string>
    <string name="photo_upload_confirm">Scroll to bottom to confirm photo upload</string>
    <string name="image_upload_success">Image Uploaded Successfully.\nDon\'t forget to click save button</string>
    <string name="post_key">Post Key</string>
    <string name="editable">editable</string>
    <string name="profile_update_failed">Profile Update Failed</string>
    <string name="contact_no">Contact No</string>
    <string name="facebook_id">Facebook ID</string>
    <string name="google_plus_id">Google Plus ID</string>
    <string name="linkedin_id">Linkedin ID</string>
    <string name="email_hint">Email</string>
</resources>
