<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_projects"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/contribution"
            android:icon="@drawable/ic_coin"
            android:title="@string/menu_contributions" />
    </group>

    <item android:title="@string/info">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_app"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
