<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amu.roboclub.ui.fragments.AdminFragment">

    <ScrollView
        android:id="@+id/account_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/account_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/ic_avatar"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/name_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"/>
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/photograph"/>
                    <RadioGroup
                        android:id="@+id/providers"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">

                    </RadioGroup>

                    <Button
                        android:id="@+id/save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:text="@string/save" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:padding="10dp"
                        android:text="@string/notification_sender"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/title_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/title"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/message_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/message"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/link_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/link_optional"/>
                    </android.support.design.widget.TextInputLayout>

                    <RadioGroup
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save_announcement_only"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/send_notification_only"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/both"/>
                    </RadioGroup>

                    <Button
                        android:id="@+id/send_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:text="@string/send" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="26sp"
        android:textStyle="italic"
        android:text="@string/signed_out_warning"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/ic_whatshot" />

</android.support.design.widget.CoordinatorLayout>
