<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="16dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@null"
                    android:tint="@color/gray"
                    app:srcCompat="@drawable/ic_clear" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/ic_avatar" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/photo_fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        app:fabSize="mini"
                        app:srcCompat="@drawable/ic_image" />

                </LinearLayout>
            </FrameLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"
                tools:visibility="visible" />

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_avatar" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_image" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/photo_link" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_gear" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/position" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_menu_team" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/batch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/batch" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_whatshot" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/menu_about" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_link" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cv_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cv_link" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_smile" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/interests"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/interests" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_phone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact_no" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_facebook" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/facebook_id" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_gplus" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gplus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/google_plus_id" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/Padded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/GrayIcon"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_linkedin" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/linkedin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/linkedin_id" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_save" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
